# Wishfox

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  db.py  main.py  worker.py
backend/app/auth/: telegram.py
backend/app/models/: __init__.py  base.py  enums.py  event.py  notification.py  subscription.py  types.py  user.py  wish.py  wishlist.py
backend/app/routers/: __init__.py  auth.py  debug.py  feed.py  link_preview.py  media.py  notifications.py  subscriptions.py  users.py  wishes.py  wishlists.py
backend/app/schemas/: __init__.py  auth.py  common.py  feed.py  link_preview.py  notification.py  subscription.py  user.py  wish.py  wishlist.py
backend/app/services/: __init__.py  notify.py  telegram_bot.py
backend/app/tests/: __init__.py  conftest.py  test_auth.py  test_media.py  test_notifications.py  test_subscriptions.py  test_wishes.py
backend/app/utils/: rate_limit.py  redis.py  security.py  seeder.py
frontend/: Dockerfile  index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BottomSheet.tsx  EmptyState.tsx  FilterBar.tsx  Layout.tsx  PriorityBadge.tsx  WishCard.tsx  icons.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useLocale.ts  useTelegramTheme.ts
frontend/src/i18n/: en.json  index.ts  ru.ts
frontend/src/lib/: telegram.ts
frontend/src/pages/: FeedPage.tsx  ProfilePage.tsx  SettingsPage.tsx  WishlistPage.tsx  (+1 more)
nginx/: nginx.conf
scripts/: smoke.sh
(+2 files in other folders)
