[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wishlist-backend"
version = "0.1.0"
description = "Telegram Wishlist Mini App backend service."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "../README.md"
authors = [{ name = "Wishlist Team" }]
dependencies = [
    "alembic>=1.13.2",
    "celery[redis]>=5.4.0",
    "fastapi[all]>=0.115.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.2",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.3.3",
    "python-dateutil>=2.9.0",
    "redis>=5.0.8",
    "SQLAlchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "fakeredis==2.23.2",
    "mypy==1.11.2",
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "ruff==0.6.3",
    "types-redis==4.6.0.20241004",
    "types-python-dateutil==2.9.0.20241003",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N", "A", "RUF"]
ignore = ["E203", "B008"]
src = ["app"]

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings"
testpaths = ["app/tests"]
